# robot_ws_autonomous_mobile_robot

./: CMakeLists.txt  README.md  package.xml
config/: joystick.yaml  my_controllers.yaml  rtabmap_params.yaml
launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  robot_state_pub.launch.py
ros2_vizualizer/: view_Robot_rtabmap_slam_model.rviz
urdf/: depth_camera.xacro  gazebo_control.xacro  myrobot.urdf.xacro  robot_core.xacro  ros2_control.xacro
