<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_mobile_robot</name>
  <version>0.0.0</version>
  <description>Development of a simple 2WD Autonomous Mobile Robot</description>
  <maintainer email="khan.shahudullah54@gmail.com">Shahudullah Khan</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_visualizer</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
